--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <h1>hello</h1>
+  <header class="header-copertina"></header>
+  <header class="header-info"></header>
+  <main></main>
+  <footer></footer>
+
 </body>
 </html>
