--- a/index.html
+++ b/index.html
@@ -7,9 +7,23 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-  <header class="header-copertina"></header>
-  <header class="header-info"></header>
-  <main></main>
+  <header class="header-copertina">
+    <img class="logo" src="./img/logo.svg" alt="">
+  </header>
+
+  <header class="header-info">
+    <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
+    <address>Scritto da <a href="#">the Booleaner</a> </address> 
+    <address>Il 10/10/2020</address>
+    <img src="./img/tim-1.jpg" alt="">
+    <img src="./img/tim-2.jpg" alt="">
+    <div>1sr Photo: John S. and James L. Knight Foundation, by Scott Henrichsen</div>
+    <div>2nd Photo: Wikimedia, by Paul Clarke</div>
+  </header>
+
+  <main>
+  </main>
+
   <footer></footer>
 
 </body>
