--- a/index.html
+++ b/index.html
@@ -22,6 +22,18 @@
   </header>
 
   <main>
+    <section>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate dolores autem eveniet dolorum nobis, magni unde vero quidem rem placeat architecto quae voluptatibus voluptate dicta doloribus enim voluptatem porro vel sapiente dolorem laudantium eum veritatis numquam amet! Tenetur dolores debitis deleniti voluptate mollitia deserunt illum, tempore obcaecati nobis nihil explicabo sequi itaque aperiam, exercitationem facilis sed laboriosam maxime illo odit cum consequuntur. <mark>Nulla ut a quia laudantium earum ratione neque? Expedita recusandae odio, vero laborum ullam maxime consectetur unde voluptatibus minima velit eaque magni a culpa?</mark> Beatae dolorum perspiciatis suscipit! Libero ipsam nemo aliquid blanditiis facilis assumenda impedit unde consequatur ea cupiditate repellendus ipsum, neque dolorum error quia ab.</p>
+    </section>
+
+    <section>
+        <ul>
+            <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Possimus temporibus eveniet ullam! Laborum eaque eum sed quas nihil possimus voluptatibus.</li>
+            <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi esse voluptatem hic minima quisquam, libero consequuntur?</li>
+            <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur ratione rem officia sapiente id excepturi eligendi blanditiis veniam iste.</li>
+        </ul>
+    </section>
+    
   </main>
 
   <footer></footer>
