--- a/index.html
+++ b/index.html
@@ -33,10 +33,36 @@
             <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur ratione rem officia sapiente id excepturi eligendi blanditiis veniam iste.</li>
         </ul>
     </section>
-    
+
+    <section>
+        <table>
+            <tr>
+                <th>Lorem, ipsum dolor.</th>
+                <th>Lorem, ipsum dolor.</th>
+                <th>Lorem, ipsum dolor.</th>
+            </tr>
+            <tr class="riga-colorata">
+                <td>Lorem, ipsum dolor.</td>
+                <td>Lorem, ipsum dolor.</td>
+                <td>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laudantium eaque, earum illum consequatur laborum quaerat voluptates dolorum architecto numquam recusandae.</td>
+            </tr>
+            <tr>
+                <td>Lorem, ipsum dolor.</td>
+                <td>Lorem, ipsum dolor.</td>
+                <td>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laudantium eaque, earum illum consequatur laborum quaerat voluptates dolorum architecto numquam recusandae.</td>
+            </tr>
+            <tr class="riga-colorata" >
+                <td>Lorem, ipsum dolor.</td>
+                <td>Lorem, ipsum dolor.</td>
+                <td>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laudantium eaque, earum illum consequatur laborum quaerat voluptates dolorum architecto numquam recusandae.</td>
+            </tr>
+        </table>
+    </section>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque, error consequuntur. <mark>Quo, deleniti repellendus! Deserunt itaque optio sed et? Asperiores voluptates nihil debitis,</mark> ipsa voluptas ex repellendus distinctio architecto qui enim impedit aspernatur rerum, corporis ipsam expedita minus quisquam quasi temporibus. Ut dolore ipsum excepturi doloremque itaque. Corporis doloribus culpa, sunt ab nemo rerum natus ad maiores illo beatae autem ipsam commodi. Eius animi repudiandae, sed reiciendis illo, fugiat, dolore quod nemo error esse nobis placeat. Error, quae laborum quaerat dolorem odio inventore. Architecto non iure odit mollitia praesentium accusantium quos voluptates earum itaque, totam hic saepe consequatur minima rerum!</p>
   </main>
 
-  <footer></footer>
+  <footer>   
+  </footer>
 
 </body>
 </html>
