--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
   </main>
 
   <footer>   
+    <address>Potrebbero interessarti</address>
+    <div class="monitor"> Lorem, ipsum dolor </div>
+    <div class="graph"> Lorem, ipsum dolor </div>
   </footer>
 
 </body>
